[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cloudflare-error-page-editor-server"
description = "Backend of the Cloudflare error page editor"
requires-python = ">=3.13"
license = "MIT"
authors = [{ name = "Anthony Donlon" }]
dependencies = [
  "Flask",
  "Flask-Limiter",
  "Flask-SqlAlchemy",
  "cloudflare-error-page @ {root:uri}/../../",
]
version = "0.0.0"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
include = ["app/**/*"]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
ignore = [
  'E722', # Bare-except
]

[tool.ruff.format]
quote-style = "single"
